--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,7 @@ http {
     tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 4096;
+    client_max_body_size 200M;
 
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
