--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint -r requirements.txt
+        pip install pylint pylint-exit -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint --init-hook="import sys; sys.path.append('.')" --variable-rgx="[a-z0-9_]{1,30}" src/ run_streamlit.py run_flask.py
+        pylint --init-hook="import sys; sys.path.append('.')" --variable-rgx="[a-z0-9_]{1,30}" src/ run_streamlit.py run_flask.py || pylint-exit $?
