--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pylint-exit -r requirements.txt
+        pip install pylint pylint-exit pytest pytest-cov -r requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint --init-hook="import sys; sys.path.append('.')" --variable-rgx="[a-z0-9_]{1,30}" src/ run_streamlit.py run_flask.py || pylint-exit $?
+    - name: Test the code with pytest
+      run: |
+        pytest test/ --cov=src.backend --cov-report=html
