--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pyarrow==12.0.0
 rapidfuzz==2.15.1
 Requests<2.29.0
 scikit_learn==1.2.2
-streamlit==1.22.0
+streamlit==1.27.2
 streamlit_autorefresh==0.0.1
 streamlit_pandas_profiling==0.1.3
 ydata_profiling==4.1.2
@@ -27,3 +27,4 @@ zingg
 hdbscan
 plotly
 kneed
+mitosheet
